--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"prepublish": "npm run build",
 		"docs": "typedoc --out docs",
 		"precommit": "lint-staged",
+		"start:server": "node ./dist/serverRunner",
+		"main": "node ./dist/main",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"husky": {
@@ -35,14 +37,17 @@
 	"author": "Rajdeep Dey",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/express": "^4.17.17",
 		"@types/node": "^18.15.3",
 		"@types/spotify-web-api-node": "^5.0.7",
 		"@typescript-eslint/eslint-plugin": "^5.56.0",
 		"@typescript-eslint/parser": "^5.56.0",
+		"axios": "^1.3.4",
 		"esdoc": "^1.0.4",
 		"eslint": "^8.36.0",
 		"eslint-config-prettier": "8.7.0",
 		"eslint-plugin-prettier": "4.2.1",
+		"express": "^4.18.2",
 		"husky": "^8.0.3",
 		"lint-staged": "^13.2.0",
 		"log4js": "^6.3.0",
