--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@types/spotify-web-api-node": "^5.0.7",
 		"@typescript-eslint/eslint-plugin": "^5.56.0",
 		"@typescript-eslint/parser": "^5.56.0",
+		"dotenv": "^16.0.3",
 		"esdoc": "^1.0.4",
 		"eslint": "^8.36.0",
 		"eslint-config-prettier": "8.7.0",
