--- a/.env_sample
+++ b/.env_sample
@@ -1,3 +1,6 @@
 SPOTIFY_API_CLIENT_ID=<Specify Spotify Client ID>
 SPOTIFY_API_CLIENT_SECRET=<Specify Spotify Client Secret>
 SPOTIFY_API_REDIRECT_URI=<Specify Spotify Redirect URI>
+SPOTIFY_USER_EMAIL=<Specify Spotify User Email - Used for Browser Automation>
+SPOTIFY_USER_PASS=<Specify Spotify User Pass - Used for Browser Automation>
+BROWSER_EXECUTABLE_PATH=<Specify Local Browser Executable Path - Used for Browser Automation>
