--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
 		"log4js": "^6.3.0",
 		"moment": "^2.29.4",
 		"prettier": "^2.8.5",
-		"puppeteer": "^19.7.5",
+		"puppeteer-core": "^19.7.5",
 		"rimraf": "^4.4.0",
 		"ts-node": "^10.9.1",
 		"typedoc": "^0.23.28",
