updating CI flow

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"precommit": "lint-staged",
 		"start:token": "node ./dist/tokenGenerator",
 		"main": "node ./dist/main",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"ciflow": "node ./dist/CIFlow"
 	},
 	"husky": {
 		"hooks": {
@@ -53,6 +53,7 @@
 		"log4js": "^6.3.0",
 		"moment": "^2.29.4",
 		"prettier": "^2.8.5",
+		"puppeteer": "^19.7.5",
 		"puppeteer-core": "^19.7.5",
 		"rimraf": "^4.4.0",
 		"ts-node": "^10.9.1",
