--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,14 +23,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Create ENV File
         run: |
-          echo "SETUP ENV Variables"
+          echo "Echo ENV Variables"
           echo "Email ${{vars.SPOTIFY_USER_EMAIL}}"
-          $env:SPOTIFY_USER_EMAIL="${{vars.SPOTIFY_USER_EMAIL}}"
           echo "ClientId ${{vars.SPOTIFY_API_CLIENT_ID}}"
-          $env:SPOTIFY_API_CLIENT_ID="${{vars.SPOTIFY_API_CLIENT_ID}}"
-          echo "Client Secret ${{secrets.SPOTIFY_API_CLIENT_SECRET}}"
-          $env:SPOTIFY_API_CLIENT_SECRET="${{secrets.SPOTIFY_API_CLIENT_SECRET}}"
-          $env:SPOTIFY_USER_PASS="${{secrets.SPOTIFY_USER_PASS}}"
       - name: Create .env with Github Secrets and run script
         run: |
           touch .env
