--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,3 +41,12 @@ jobs:
       - run: npm i
       - run: npm run build
       - run: npm run ciflow
+      - name: Archive artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: Important Artfacts
+          path: |
+            screenshots/**.jpg
+            token.json
+      - name: Download all workflow run artifacts
+        uses: actions/download-artifact@v3
