--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
         with:
           name: Important Artfacts
           path: |
-            screenshots/**.jpg
+            screenshots
             token.json
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v3
