--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -40,10 +40,12 @@ jobs:
       - name: Create .env with Github Secrets and run script
         run: |
           New-Item -Path .env
-          echo SPOTIFY_API_CLIENT_SECRET=$SPOTIFY_API_CLIENT_SECRET >> .env
-          echo SPOTIFY_USER_PASS=$SPOTIFY_USER_PASS >> .env
-          echo SPOTIFY_USER_EMAIL=$SPOTIFY_USER_EMAIL >> .env
-          echo SPOTIFY_API_CLIENT_ID=$SPOTIFY_API_CLIENT_ID >> .env
+          Add-Content -Path .env -Value SPOTIFY_API_CLIENT_SECRET=$SPOTIFY_API_CLIENT_SECRET
+          Add-Content -Path .env -Value SPOTIFY_USER_PASS=$SPOTIFY_USER_PASS
+          Add-Content -Path .env -Value SPOTIFY_USER_EMAIL=$SPOTIFY_USER_EMAIL
+          Add-Content -Path .env -Value SPOTIFY_API_CLIENT_ID=$SPOTIFY_API_CLIENT_ID
+          $lines = Get-Content -Path .\env.txt
+          Write-Host "Env contains $($lines)"      
         env:
           SPOTIFY_API_CLIENT_SECRET: ${{ secrets.SPOTIFY_API_CLIENT_SECRET }}
           SPOTIFY_USER_PASS: ${{ github.event.inputs.spotify_user_pass }}
