--- a/.github/workflows/scheduled.yml
+++ b/.github/workflows/scheduled.yml
@@ -1,33 +1,11 @@
 # This is a basic workflow that is manually triggered
-name: Manual Utility Runner
+name: Scheduled Utility Runner
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
 on:
-  workflow_dispatch:
-    # Inputs the workflow accepts.
-    inputs:
-      util_name:
-        # Spotify User Name
-        description: "util name - provide all/random/weekly"
-        # Default value if no value is explicitly provided
-        default: ""
-        # Input has to be provided for the workflow to run
-        required: false
-      spotify_user_name:
-        # Spotify User Name
-        description: "Spotify User Email/username"
-        # Default value if no value is explicitly provided
-        default: ""
-        # Input has to be provided for the workflow to run
-        required: true
-      spotify_user_pass:
-        # Spotify User Password
-        description: "Spotify User Password"
-        # Default value if no value is explicitly provided
-        default: ""
-        # Input has to be provided for the workflow to run
-        required: true
+  schedule:
+    - cron: "0 7 * * *" #“At 07:00.”
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -50,7 +28,6 @@ jobs:
           SPOTIFY_USER_PASS: ${{ github.event.inputs.spotify_user_pass }}
           SPOTIFY_USER_EMAIL: ${{ github.event.inputs.spotify_user_name}}
           SPOTIFY_API_CLIENT_ID: ${{vars.SPOTIFY_API_CLIENT_ID}}
-          UTIL_NAME: ${{github.event.inputs.util_name}}
       - run: npm i
       - run: npm run build
       - run: npm run ciflow
