--- a/.github/workflows/scheduled.yml
+++ b/.github/workflows/scheduled.yml
@@ -4,6 +4,25 @@ name: Scheduled Utility Runner
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
 on:
+  workflow_dispatch:
+
+    # Inputs the workflow accepts.
+
+    inputs:
+
+      util_name:
+
+        # Spotify User Name
+
+        description: "util name - provide all/random/weekly"
+
+        # Default value if no value is explicitly provided
+
+        default: ""
+
+        # Input has to be provided for the workflow to run
+
+        required: false
   schedule:
     - cron: "0 7 * * *" #“At 07:00.”
 
