update to YAML schedules

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [master]
   schedule:
-    - cron: "0 6 * * *" #“At 06:00.”
+    - cron: "0 */1 * * *" #“every 1 hours.”
 
 jobs:
   build:
