--- a/.github/workflows/scheduled.yml
+++ b/.github/workflows/scheduled.yml
@@ -5,26 +5,8 @@ name: Scheduled Utility Runner
 # or API.
 on:
   workflow_dispatch:
-
-    # Inputs the workflow accepts.
-
-    inputs:
-
-      util_name:
-
-        # Spotify User Name
-
-        description: "util name - provide all/random/weekly"
-
-        # Default value if no value is explicitly provided
-
-        default: ""
-
-        # Input has to be provided for the workflow to run
-
-        required: false
   schedule:
-    - cron: "0 7 * * *" #“At 07:00.”
+    - cron: "0 */2 * * *" #“every 1 hours.”
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
