--- a/.github/workflows/scheduled.yml
+++ b/.github/workflows/scheduled.yml
@@ -6,7 +6,7 @@ name: Scheduled Utility Runner
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 */2 * * *" #“every 1 hours.”
+    - cron: "0 */8 * * *" #“every 8 hours.”
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -35,10 +35,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v3
         with:
-          name: Important Artfacts
+          name: Artfacts
           path: |
             screenshots
             token.json
-      - name: Download all workflow run artifacts
-        if: always()
-        uses: actions/download-artifact@v3
