Draft - Commit - for Image DownLoader

--- a/.env_sample
+++ b/.env_sample
@@ -4,3 +4,6 @@ SPOTIFY_API_REDIRECT_URI=<Specify Spotify Redirect URI>
 SPOTIFY_USER_EMAIL=<Specify Spotify User Email - Used for Browser Automation>
 SPOTIFY_USER_PASS=<Specify Spotify User Pass - Used for Browser Automation>
 BROWSER_EXECUTABLE_PATH=<Specify Local Browser Executable Path - Used for Browser Automation>
+#OPTIONAL_USED_FOR_COVER_ART_DOWNLOAD
+UNSPLASH_API_CLIENT_ID=<Specify UNSPLASH Client ID>
+UNSPLASH_API_CLIENT_SECRET=-<Specify UNSPLASH Client Secret>
