--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,5 +11,7 @@
 		"sourceType": "module"
 	},
 	"plugins": ["@typescript-eslint"],
-	"rules": {}
+	"rules": {
+		"no-mixed-spaces-and-tabs": 1
+	}
 }
