logger related updates

--- a/.env_sample
+++ b/.env_sample
@@ -7,3 +7,4 @@ BROWSER_EXECUTABLE_PATH=<Specify Local Browser Executable Path - Used for Browse
 #OPTIONAL_USED_FOR_COVER_ART_DOWNLOAD
 UNSPLASH_API_CLIENT_ID=<Specify UNSPLASH Client ID>
 UNSPLASH_API_CLIENT_SECRET=-<Specify UNSPLASH Client Secret>
+KEEP_LOGS=true
