--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"main": "node ./dist/runner/main",
 		"ciflow": "node ./dist/runner/CIFlow",
 		"profile:crawl": "node ./dist/runner/profileCrawler",
+		"playlist:crawl": "node ./dist/runner/playlistCrawler",
 		"build:scheduled": "npm run build && npm run ciflow"
 	},
 	"husky": {
