--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"main": "node ./dist/runner/main",
 		"ciflow": "node ./dist/runner/CIFlow",
 		"profile:crawl": "node ./dist/runner/profileCrawler",
-		"playlist:crawl": "node ./dist/runner/playlistRecommedations",
+		"similar:playlist": "node ./dist/runner/playlistRecommedations",
 		"build:scheduled": "npm run build && npm run ciflow"
 	},
 	"husky": {
