--- a/.github/workflows/scheduled.yml
+++ b/.github/workflows/scheduled.yml
@@ -6,14 +6,14 @@ name: Scheduled Utility Runner
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 */8 * * *" #“every 8 hours.”
+    - cron: "0 */10 * * *" #“every 8 hours.”
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "UtilRunner"
   UtilRunner:
     # The type of runner that the job will run on
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
