logging to console added as a configurable flag

--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -46,6 +46,7 @@ jobs:
       - name: Create .env with Github Secrets and run script
         uses: iamsauravsharma/create-dotenv@v1.2.2
         env:
+          LOG_TO_CONSOLE: true
           SPOTIFY_API_CLIENT_SECRET: ${{ secrets.SPOTIFY_API_CLIENT_SECRET }}
           SPOTIFY_USER_PASS: ${{ github.event.inputs.spotify_user_pass }}
           SPOTIFY_USER_EMAIL: ${{ github.event.inputs.spotify_user_name}}
