Cleaning Up puppeteer Error logging added Flag to control behavior of HEADLESS MODE run of puppeteer

--- a/.github/workflows/scheduled.yml
+++ b/.github/workflows/scheduled.yml
@@ -26,6 +26,7 @@ jobs:
         uses: iamsauravsharma/create-dotenv@v1.2.2
         env:
           LOG_TO_CONSOLE: true
+          RUN_ON_HEADLESS: false
           SPOTIFY_API_CLIENT_SECRET: ${{ secrets.SPOTIFY_API_CLIENT_SECRET }}
           SPOTIFY_USER_PASS: ${{ secrets.SPOTIFY_USER_PASS }}
           SPOTIFY_USER_EMAIL: ${{ vars.SPOTIFY_USER_EMAIL}}
