--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -47,6 +47,7 @@ jobs:
         uses: iamsauravsharma/create-dotenv@v1.2.2
         env:
           LOG_TO_CONSOLE: true
+          RUN_ON_HEADLESS: false
           SPOTIFY_API_CLIENT_SECRET: ${{ secrets.SPOTIFY_API_CLIENT_SECRET }}
           SPOTIFY_USER_PASS: ${{ github.event.inputs.spotify_user_pass }}
           SPOTIFY_USER_EMAIL: ${{ github.event.inputs.spotify_user_name}}
